# mimalloc-rs

./: .gitignore  Cargo.toml  readme.md
src/: alloc.rs  ic.rs  lib.rs  memory.rs  mimalloc_h.rs  mimalloc_types_h.rs
